# PerspectivesOA

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260505_0001_initial_schema.py
app/: __init__.py  main.py  settings.py
app/api/: extraction.py  intelligence.py  schemas.py
app/db/: __init__.py  models.py  session.py
app/domain/: __init__.py  extraction.py  models.py
app/intelligence/: __init__.py
app/intelligence/asam/: __init__.py  engine.py  rules.yaml
app/intelligence/tjc/: __init__.py  engine.py  rules.yaml
app/simplepractice/: __init__.py  client.py  fixture_backend.py  jsonapi.py  raw_models.py
docs/: ASAM_RULES.md  ENDPOINTS.md  TJC_RULES.md
fixtures/: client.json  overview-items.json  treatable-client.json
fixtures/appointments/: 3505428529.json  3505428542.json  3505428553.json
samples/: asam_assessment.json  patient_extract.json  tjc_audit.json
scripts/: parse_har.py  seed_db.py
tests/: conftest.py  test_asam_jamie.py  test_extraction.py  test_jsonapi_parser.py  test_tjc_jamie.py
