[project]
name = "perspectives-oa"
version = "0.1.0"
description = "PerspectivesOA — SimplePractice clinical extraction + ASAM 4th edition / TJC CTS audit service"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rohan Nagpure", email = "nagpure.r@northeastern.edu" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.34",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "beautifulsoup4>=4.12.3",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12.20240917",
    "types-python-dateutil>=2.9.0.20241003",
    "types-beautifulsoup4>=4.12.0.20240907",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
